syntax = "proto3";

package chef.automate.domain.cfgmgmt.response;
option go_package = "github.com/chef/automate/api/interservice/cfgmgmt/response";

message RunsCounts {
  int32 total = 1;
  int32 success = 2;
  int32 failure = 3;
}

message NodesCounts {
  int32 total = 1;
  int32 success = 2;
  int32 failure = 3;
  int32 missing = 4;
}

message CheckInCountsTimeSeries {
  // List of daily checkin counts
  repeated CheckInCounts counts = 1;
}

message CheckInCounts {
  string start = 1;
  string end = 2;
  int32 count = 3;
  int32 total = 4;
}
